# cpp_atomics_required

./: CMakeLists.txt  ConfigByAtomic.h  ConfigByFunction.h  ConfigByModule.h  ConfigByParam.h  ConfigByPointer.h  Manager.cpp  Manager.h  README.md  TaskA.cpp  TaskA.h  TaskB.cpp  TaskB.h  main.cpp
